# Interprete

./: .gitignore
network_interpreter/: Cargo.toml  TEST_RESULTS.md  definiciones.net  phases  proy_com_oto2025.md
network_interpreter/src/: ast.rs  error.rs  interpreter.rs  main.rs  parser.rs  semantic.rs  visualizer.rs
